[tool.poetry]
name = "dcao-dashboard"
version = "0.1.0"
description = ""
authors = ["nicolas couturier <n.couturier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pandas = "^2.2.2"
numpy = "^2.1.0"
millify = "^0.1.1"
streamlit-extras = "^0.4.7"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
